Update token, text

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,5 +6,11 @@
   Hello World
   <p>New value</p>
   <p>Another new value</p>
+  <p>text 1</p>
+  <p>text 2</p>
+  <p>text 3</p>
+  <p>text 4</p>
+  <p>text 5</p>
+  <p>text 6</p>
 </body>
 </html>
